--- a/EmailCleanerPro.ipynb
+++ b/EmailCleanerPro.ipynb
@@ -63,8 +63,8 @@
         "<div style=\"background: linear-gradient(135deg, #0d1117 0%, #161b22 100%); padding: 25px; border-radius: 12px; margin: 20px 0; border: 2px solid #00ff00; box-shadow: 0 4px 20px rgba(0, 255, 0, 0.3);\">\n",
         "<h3 style=\"color: #00ff00; margin-top: 0;\">⚡ 3 Simple Steps</h3>\n",
         "<ol style=\"color: #00ff41; font-size: 1.1em; line-height: 2;\">\n",
-        "<li><strong>Execute Cell 2</strong> → Automatic installation & deployment (2-3 minutes)</li>\n",
-        "<li><strong>Execute Cell 3</strong> → Launch the application (instant)</li>\n",
+        "<li><strong>Execute Cell 4</strong> → Automatic installation & deployment (2-3 minutes)</li>\n",
+        "<li><strong>Execute Cell 8</strong> → Launch the application (instant)</li>\n",
         "<li><strong>Start validating!</strong> → Paste emails or upload CSV/Excel</li>\n",
         "</ol>\n",
         "<div style=\"background: rgba(0, 255, 0, 0.1); padding: 15px; border-radius: 8px; margin-top: 15px; border: 1px solid #00ff00;\">\n",
@@ -148,66 +148,13 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": [
-        "# 🚀 Email Cleaner Pro - The Ultimate Email Validation Matrix\n",
-        "\n",
-        "<div style=\"text-align: center; padding: 25px; background: linear-gradient(135deg, #0a0a0a 0%, #1a1a2e 50%, #16213e 100%); color: #00ff00; border-radius: 15px; margin: 15px 0; border: 2px solid #00ff00; box-shadow: 0 0 20px rgba(0, 255, 0, 0.3);\">\n",
-        "<h2 style=\"color: #00ff00; text-shadow: 0 0 10px #00ff00; font-family: 'Courier New', monospace;\">📧 ENTER THE EMAIL MATRIX</h2>\n",
-        "<p style=\"font-size: 20px; margin: 15px 0; color: #00ff41; text-shadow: 0 0 5px #00ff41;\">Neo-level email validation with Matrix-style bounce analysis & risk scoring</p>\n",
-        "<div style=\"background: rgba(0, 255, 0, 0.1); padding: 10px; border-radius: 8px; margin: 10px 0; border: 1px solid #00ff00;\">\n",
-        "<code style=\"color: #00ff00; font-family: 'Courier New', monospace;\">Wake up, Neo... The email validation has you...</code>\n",
-        "</div>\n",
-        "</div>\n",
-        "\n",
-        "## ✨ What This Tool Does\n",
-        "\n",
-        "| Feature | Description |\n",
-        "|---------|-------------|\n",
-        "| 🔍 **Email Validation** | Checks format, DNS records, and email deliverability |\n",
-        "| 🚫 **Disposable Detection** | Identifies temporary/fake email addresses |\n",
-        "| ⚠️ **Risk Scoring** | Rates emails from EXCELLENT to CRITICAL |\n",
-        "| 📊 **Beautiful Charts** | Interactive donut charts and bar graphs |\n",
-        "| 🗺️ **GeoIP Mapping** | Shows email locations on a world map |\n",
-        "| 📧 **Bounce Analysis** | Parses bounce emails and extracts DSN headers |\n",
-        "| 📁 **Export Results** | Save data as CSV or Excel files |\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## 🎯 Perfect For\n",
-        "- **Email Marketers** cleaning their lists\n",
-        "- **Business Owners** validating customer emails\n",
-        "- **Developers** testing email validation logic\n",
-        "- **Anyone** who wants to improve email deliverability"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 🔮 MATRIX CONFIGURATION - The Architect's Blueprint\n",
         "\n",
-        "<div style=\"background: linear-gradient(135deg, #0d1117 0%, #161b22 100%); padding: 20px; border-left: 5px solid #00ff00; margin: 15px 0; border-radius: 8px; box-shadow: 0 4px 15px rgba(0, 255, 0, 0.2);\">\n",
-        "<strong style=\"color: #00ff00; font-family: 'Courier New', monospace;\">🎯 MISSION BRIEFING:</strong> \n",
-        "<span style=\"color: #00ff41;\">This cell initializes the Matrix connection to your GitHub assets repository. Think of it as plugging into the mainframe.</span>\n",
-        "</div>\n",
-        "\n",
-        "<div style=\"background: rgba(0, 255, 0, 0.05); padding: 15px; border-radius: 8px; margin: 10px 0; border: 1px solid #00ff00;\">\n",
-        "<strong style=\"color: #00ff00;\">⚡ AGENT INSTRUCTIONS:</strong>\n",
-        "<ol style=\"color: #00ff41; margin: 10px 0;\">\n",
-        "<li><strong>Enter your GitHub username</strong> - Replace <code style=\"background: #1a1a2e; color: #00ff00; padding: 2px 6px; border-radius: 4px;\">VOTRE_USERNAME</code> with your actual GitHub handle</li>\n",
-        "<li><strong>Deploy your assets</strong> - Upload files to your public GitHub repository</li>\n",
-        "<li><strong>Execute this cell</strong> - Build the Matrix connection URLs</li>\n",
-        "</ol>\n",
-        "</div>\n",
-        "\n",
-        "<div style=\"background: rgba(0, 255, 0, 0.1); padding: 15px; border-radius: 8px; margin: 10px 0; border: 1px solid #00ff00;\">\n",
-        "<strong style=\"color: #00ff00;\">📦 REQUIRED MATRIX COMPONENTS:</strong>\n",
-        "<ul style=\"color: #00ff41; margin: 10px 0;\">\n",
-        "<li>🖼️ <strong>Logo Image</strong> - Your brand identity in the Matrix</li>\n",
-        "<li>🌍 <strong>GeoLite2 Database</strong> - The world map for email locations</li>\n",
-        "<li>📧 <strong>Bounce Examples</strong> - 3 .eml files for bounce analysis training</li>\n",
-        "</ul>\n",
-        "</div>\n",
         "\n"
       ]
     },
@@ -306,33 +253,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## ⚡ MATRIX DEPENDENCIES - Downloading the Red Pill\n",
-        "\n",
-        "<div style=\"background: linear-gradient(135deg, #0d1117 0%, #161b22 100%); padding: 20px; border-left: 5px solid #ff6b35; margin: 15px 0; border-radius: 8px; box-shadow: 0 4px 15px rgba(255, 107, 53, 0.2);\">\n",
-        "<strong style=\"color: #ff6b35; font-family: 'Courier New', monospace;\">🎯 MISSION BRIEFING:</strong> \n",
-        "<span style=\"color: #ff8c42;\">This cell downloads and installs all the Matrix components needed for email validation, data visualization, and bounce analysis. Think of it as taking the red pill...</span>\n",
-        "</div>\n",
-        "\n",
-        "<div style=\"background: rgba(255, 107, 53, 0.05); padding: 15px; border-radius: 8px; margin: 10px 0; border: 1px solid #ff6b35;\">\n",
-        "<strong style=\"color: #ff6b35;\">⏱️ ESTIMATED TIME:</strong> <span style=\"color: #ff8c42;\">1-2 minutes (Matrix time is relative)</span>\n",
-        "</div>\n",
-        "\n",
-        "<div style=\"background: rgba(255, 107, 53, 0.1); padding: 15px; border-radius: 8px; margin: 10px 0; border: 1px solid #ff6b35;\">\n",
-        "<strong style=\"color: #ff6b35;\">🔧 MATRIX COMPONENTS BEING DOWNLOADED:</strong>\n",
-        "<ul style=\"color: #ff8c42; margin: 10px 0;\">\n",
-        "<li><code style=\"background: #1a1a2e; color: #ff6b35; padding: 2px 6px; border-radius: 4px;\">ipywidgets</code> - Interactive Matrix controls</li>\n",
-        "<li><code style=\"background: #1a1a2e; color: #ff6b35; padding: 2px 6px; border-radius: 4px;\">plotly</code> - 3D Matrix visualizations</li>\n",
-        "<li><code style=\"background: #1a1a2e; color: #ff6b35; padding: 2px 6px; border-radius: 4px;\">folium</code> - World map projections</li>\n",
-        "<li><code style=\"background: #1a1a2e; color: #ff6b35; padding: 2px 6px; border-radius: 4px;\">pandas</code> - Data manipulation algorithms</li>\n",
-        "<li><code style=\"background: #1a1a2e; color: #ff6b35; padding: 2px 6px; border-radius: 4px;\">dnspython</code> - DNS reconnaissance tools</li>\n",
-        "<li><code style=\"background: #1a1a2e; color: #ff6b35; padding: 2px 6px; border-radius: 4px;\">aiohttp</code> - Asynchronous Matrix connections</li>\n",
-        "<li><code style=\"background: #1a1a2e; color: #ff6b35; padding: 2px 6px; border-radius: 4px;\">maxminddb</code> - GeoIP location services</li>\n",
-        "</ul>\n",
-        "</div>\n",
-        "\n",
-        "<div style=\"background: rgba(255, 107, 53, 0.1); padding: 15px; border-radius: 8px; margin: 10px 0; border: 1px solid #ff6b35;\">\n",
-        "<strong style=\"color: #ff6b35;\">💡 PRO TIP:</strong> <span style=\"color: #ff8c42;\">If installation fails, just run this cell again. The Matrix will self-correct...</span>\n",
-        "</div>\n"
+        "\n"
       ]
     },
     {
@@ -340,11 +261,7 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": [
-        "# This cell is now merged into Cell 4 (One-Click Deployment)\n",
-        "# All dependencies are installed automatically there\n",
-        "pass"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -472,11 +389,13 @@
         "            resolver.lifetime = 3\n",
         "            \n",
         "            # Check MX records\n",
+        "            mx_records = []\n",
         "            try:\n",
         "                mx_records = resolver.resolve(domain, 'MX')\n",
         "                mx_exists = len(mx_records) > 0\n",
         "            except (dns.resolver.NoAnswer, dns.resolver.NXDOMAIN, dns.resolver.Timeout, dns.exception.DNSException):\n",
         "                mx_exists = False\n",
+        "                mx_records = []\n",
         "            \n",
         "            # Check A records\n",
         "            try:\n",
@@ -488,7 +407,7 @@
         "            result = {\n",
         "                'mx_exists': mx_exists,\n",
         "                'a_exists': a_exists,\n",
-        "                'mx_count': len(mx_records) if mx_exists else 0\n",
+        "                'mx_count': len(mx_records) if mx_exists and mx_records else 0\n",
         "            }\n",
         "            \n",
         "            # Cache the result\n",
@@ -571,8 +490,21 @@
         "        sem = get_semaphore()\n",
         "        async with sem:\n",
         "            try:\n",
-        "                # Basic email format check\n",
-        "                if not email or '@' not in email:\n",
+        "                # Basic validation: must be non-empty string\n",
+        "                if not email or not isinstance(email, str) or not email.strip():\n",
+        "                    return {\n",
+        "                        'email': str(email) if email else '',\n",
+        "                        'format_valid': False,\n",
+        "                        'dns_info': {'mx_exists': False, 'a_exists': False, 'mx_count': 0},\n",
+        "                        'is_disposable': False,\n",
+        "                        'suspicious_issues': ['Invalid email: empty or not a string'],\n",
+        "                        'risk_score': 100,\n",
+        "                        'risk_level': '🔴 CRITICAL',\n",
+        "                        'timestamp': datetime.now().isoformat()\n",
+        "                    }\n",
+        "                \n",
+        "                # Check for @ symbol\n",
+        "                if '@' not in email:\n",
         "                    return {\n",
         "                        'email': email,\n",
         "                        'format_valid': False,\n",
@@ -802,33 +734,54 @@
         "            'IN': [20.5937, 78.9629]\n",
         "        }\n",
         "        \n",
-        "        # Analyze emails\n",
+        "        # Analyze emails with GeoLite\n",
         "        country_counts = {}\n",
+        "        import socket\n",
+        "        \n",
         "        for result in results:\n",
-        "            if 'dns_info' in result and result['dns_info']['a_exists']:\n",
-        "                domain = result['email'].split('@')[1]\n",
-        "                country = 'US'  # Default\n",
+        "            if 'dns_info' not in result or not result['dns_info'].get('a_exists'):\n",
+        "                continue\n",
         "                \n",
-        "                if domain.endswith('.fr'):\n",
-        "                    country = 'FR'\n",
-        "                elif domain.endswith('.de'):\n",
-        "                    country = 'DE'\n",
-        "                elif domain.endswith('.uk'):\n",
-        "                    country = 'GB'\n",
-        "                elif domain.endswith('.ca'):\n",
-        "                    country = 'CA'\n",
-        "                elif domain.endswith('.au'):\n",
-        "                    country = 'AU'\n",
-        "                elif domain.endswith('.jp'):\n",
-        "                    country = 'JP'\n",
-        "                elif domain.endswith('.cn'):\n",
-        "                    country = 'CN'\n",
-        "                elif domain.endswith('.br'):\n",
-        "                    country = 'BR'\n",
-        "                elif domain.endswith('.in'):\n",
-        "                    country = 'IN'\n",
+        "            try:\n",
+        "                domain = result['email'].split('@')[1] if '@' in result['email'] else None\n",
+        "                if not domain:\n",
+        "                    continue\n",
+        "                \n",
+        "                # Try to get IP and country from GeoLite\n",
+        "                country = None\n",
+        "                try:\n",
+        "                    ip = socket.gethostbyname(domain)\n",
+        "                    country_data = geolite_reader.get(ip)\n",
+        "                    if country_data and 'country' in country_data:\n",
+        "                        country = country_data['country']['iso_code']\n",
+        "                except (socket.gaierror, KeyError, AttributeError, TypeError):\n",
+        "                    pass\n",
+        "                \n",
+        "                # Fallback to TLD if GeoLite fails\n",
+        "                if not country:\n",
+        "                    country = 'US'  # Default\n",
+        "                    if domain.endswith('.fr'):\n",
+        "                        country = 'FR'\n",
+        "                    elif domain.endswith('.de'):\n",
+        "                        country = 'DE'\n",
+        "                    elif domain.endswith('.uk') or domain.endswith('.co.uk'):\n",
+        "                        country = 'GB'\n",
+        "                    elif domain.endswith('.ca'):\n",
+        "                        country = 'CA'\n",
+        "                    elif domain.endswith('.au'):\n",
+        "                        country = 'AU'\n",
+        "                    elif domain.endswith('.jp'):\n",
+        "                        country = 'JP'\n",
+        "                    elif domain.endswith('.cn'):\n",
+        "                        country = 'CN'\n",
+        "                    elif domain.endswith('.br'):\n",
+        "                        country = 'BR'\n",
+        "                    elif domain.endswith('.in'):\n",
+        "                        country = 'IN'\n",
         "                \n",
         "                country_counts[country] = country_counts.get(country, 0) + 1\n",
+        "            except (IndexError, AttributeError, TypeError):\n",
+        "                continue\n",
         "        \n",
         "        # Add markers\n",
         "        for country, count in country_counts.items():\n",
@@ -934,7 +887,7 @@
         "        \n",
         "        # Top domains\n",
         "        df['domain'] = df['recipient_email'].apply(\n",
-        "            lambda x: x.split('@')[1] if '@' in str(x) else 'unknown'\n",
+        "            lambda x: x.split('@')[1] if '@' in str(x) and str(x).strip() else 'unknown'\n",
         "        )\n",
         "        domain_counts = df['domain'].value_counts().head(10)\n",
         "        \n",
